--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
     <footer>
-        <p>&#169 2023; All rights reserved by Zunayed Limon</p>
+        <p>&#169 2023; All rights reserved by Ib</p>
     </footer>
 
     <!-- JavaScript File  -->
